<resources>
    <string name="app_name">CSI_Week_1</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="bounty">Bounty</string>
    <string name="details">fsdfdsdfjsdfskdhbfsdkbflhsdbfhjlasbhjdbsghjbdfhgjbdfsjhfgdsbgfhkjsdbfgjdbgkjfdbsghjkfdsbghjkfdbsghkjdbghjbsfddsffsdsfdfdsafdfdsdfadfsaadfsadfsfadadfsadfsadfsfadsdfaskhadfshgkfdsakhjfdkhjfdkhjgfdsjkghfdaskghjfadskghjadfskghjdfsakghjkjghfdsgjkhdfsjkghdsffdsdfhjkfgbdfhjbghjfdbkghjfdsbgjhkdbghjkdfbghjdfbghjdfbghjdfsbgkjhfdbghjfdbghjbdfhjgbdfhjgbdfhjbgkjhfdbgjkh</string>
    <string name="report">Report</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_report2">Report2Activity</string>
    <string name="title_activity_test">Test</string>
    <string name="picture">Take picture</string>
    <string name="gps">GPS Position</string>
    <string name="call">Call 911</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="bgName">Pablo Emilio Escobar Gaviria</string>
    <string name="bgGender">Male</string>
    <string name="bgAge">54</string>
    <string name="bgBounty">Drugs trafficing, murder</string>
    <string name="title_activity_criminalist">criminalist</string>
</resources>
